-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
None
-
Qt Creator 13.0.0
-
None
-
Windows 11
-
-
bfbe49f81 (master)
`Ctrl + Backspace` key combo doesn't work properly in the embedded terminal emulator, which causes backward delete word to no longer work in PowerShell.
Use this command to test key presses in PowerShell:
```powershell
[System.Console]::ReadKey($true)
```
When using fish shell (WSL2) inside Qt Creator, it is interpreted as `\e[127\;5u`. When using fish shell inside Windows Terminal, it's interpreted as '\b`. Use this command to test key presses in fish shell:
```fish
fish_key_reader
```