Terminal: Add keyboard shortcuts for backspace

Adds Keyboard shortcuts to delete a word to the left
and the full line to the left.

Fixes: QTCREATORBUG-30635
Change-Id: I73681728af9662d104a24d43a73794e33a4a961c
Reviewed-by: Cristian Adam <cristian.adam@qt.io>