src/plugins/terminal/terminalwidget.h
@@ -107,6 +107,8 @@ private:
     RegisteredAction m_selectAll;
     RegisteredAction m_moveCursorWordLeft;
     RegisteredAction m_moveCursorWordRight;
+    RegisteredAction m_deleteWordLeft;
+    RegisteredAction m_deleteLineLeft;
 
     Internal::ShortcutMap m_shortcutMap;
 
